--- a/thuchanhjs.html
+++ b/thuchanhjs.html
@@ -82,7 +82,7 @@
             }
 
             if (notCheck(f.gender)) {
-                alert("gender be selected");
+                alert("gender must be selected");
                 return false;
             }
 
